# edgefinder

./: .gitignore  .mcp.json  CLAUDE.md  HANDOFF.md  LIVE-REBUILD-PLAN-v2.md  LIVE-REBUILD-PLAN.md  PLAN.md  README.md  REBUILD-PLAN.md  REBUILD-V3.md  REDESIGN_PLAN.md  SCHEMA.md  SETUP-COACH.md  STATE.md  alembic.ini  pyproject.toml  render.yaml  requirements.txt  setup.py
.claude/: agent-config.example.json  settings.json
.devcontainer/: devcontainer.json  post-create.sh
agent/: __init__.py  announce.py  backtest_tool.py  brain.py  broker.py  data.py  edgar.py  knowledge.py  lab.py  ledger.py  market.py  models.py  occ.py  options_data.py  preflight.py  refresh.py  rest.py  store.py  streamer.py
api/: index.py
config/: secrets.env.example  settings.py
dashboard/: app.py  dependencies.py  services.py  symbol_service.py  ttl_cache.py
data/: suggestions.json
docs/: EdgeFinder_Project_Spec.docx  ROUTINES.md  fundamentals-sources.md  fundamentals-validation.md  knowledge-desk-handover.md
edgefinder/: pytest.ini  requirements.txt
hunt/: queue.json
intraday/: menu.json  queue.json
modules/: database.py  journal.py  optimizer.py  scanner.py  scheduler.py  sentiment.py  signals.py  trader.py  utils.py
ops/: intraday.flag  minute-backfill.flag  r2-check.flag
reviews/: 2026-07-16-skeptics-audit.md  AI-ANALYST.md  DAILY-ROUND-1.md  DAILY-ROUND-2.md  HOLDOUT-BURN-PROTOCOL.md  HOLDOUT-BURN.md  HUNT-ROUND-1.md  HUNT-ROUND-2.md  HUNT-ROUND-3.md  HUNT-ROUND-4.md  INTRADAY-ROUND-1.md  INTRADAY-ROUND-2.md  REAL-MONEY-RUNBOOK.md
scripts/: backfill_daily_bars.py  (+21 more)
(+401 files in other folders)
