[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "edgefinder"
version = "2.0.0"
description = "Trading workbench for strategy research and paper trading"
requires-python = ">=3.11"
dependencies = [
    # Data
    "polygon-api-client>=1.14.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "pyarrow>=15.0.0",

    # Domain models + settings
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Database
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",

    # WebSocket streaming
    "websockets>=12.0",

    # Scheduling
    "apscheduler>=3.10.0",
    "tzdata>=2024.1",

    # Web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: hits real external APIs (deselect with -m 'not integration')",
]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
